--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,25 @@
     "serve": "vite preview",
     "build": "vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "axios": "^1.4.0",
+    "axios": "^1.2.1",
+    "pinia": "^2.0.28",
     "roboto-fontface": "*",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuetify": "npm:@vuetify/nightly@next",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.5",
+    "@types/node": "^20.2.5",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "vite": "^4.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "^2.5.8"
   }
